--- a/docs/1.md
+++ b/docs/1.md
@@ -1,1 +1,4 @@
+## License
+Licensed under the [MIT License](http://opensource.org/licenses/MIT).
+You can find a copy of it in [LICENSE](LICENSE).
 
